2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (lp_solver_init): Added a check that at least one of
	the obj. fn coefficents should be != 0.
	(lp_solver_init): Add checks that both LHS and RHS are numbers.

	* reports.c (solver_performance_report): Fixed the `OS' title to be bold.
	Improve the titles and add the name of the algorithm.

	* api.c: Started adding support for GLPK.

2002-03-14  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* api.c: Fixed the name space bloat from the LP Solve.

2002-03-12  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* api.h, Makefile.am, solver.c: Added api.h.

	* solver.c, reports.c, api.c: Added GPL clause.

	* Makefile.am, api.c: New file.  Contains the API wrappings for
	the optimization algorithms.

	* solver.c (solver): Bug fix: added a type coersion.

	* reports.c : moved set_bold and set_underlined into
	src/tools/dao.[ch].

2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* reports.c : changed names of utility functions now in 
	  src/tools/dao.[hc]

2002-03-11  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (fill_header_titles): Added also the printing of the
	time.
	(solver_program_report): Print the coefficent only if it is != 1.
	(solver_performance_report): Fixed the CPU model and MHz printing
	at least for Linux.
	(get_cpu_info): Wrote.

	* solver.c (solver): Use G_USEC_PER_SEC instead of a constant.

	* reports.c (solver_limits_report): Changed the row nbr to three
	to make the title visible again.
	
2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-10  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (solver_sensitivity_report): Some improvements.

	* solver.c (is_still_feasible): Wrote.
	(calculate_limits): Wrote.
	(solver): Finished the limits reporting.
	(check_program_definition_failures): Fixed allocation bug.

	* reports.c (solver_program_report): Implemented the program