@@ -1,3 +1,9 @@
+2002-03-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>
+
+	* api.c: Added support for automatic scaling and non-negativity
+	assumption options.  Framwork for max iterations and max time
+	options added too.
+
 2002-03-15  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>
 
 	* solver.c (lp_solver_init): Added a check that at least one of
